[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Piotr Chromiec <tworec@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.2"
serde_json = "1.0"
num-complex = "0.2"
rayon = "1.1"
